--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "moment": "^2.29.4",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
