--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/stoodkev/hive-keychain-commons#readme",
   "devDependencies": {
+    "@types/node": "^18.7.14",
     "prettier": "^2.4.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
