--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
   },
   "homepage": "https://github.com/stoodkev/hive-keychain-commons#readme",
   "devDependencies": {
-    "@types/node": "^18.7.14",
+    "@types/bytebuffer": "^5.0.44",
+    "@types/node": "^18.11.19",
     "prettier": "^2.4.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@hiveio/dhive": "^1.2.5",
     "moment": "^2.29.4",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1"
