--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hive-keychain-commons",
-  "version": "1.2.2",
-  "description": "Platform agnostic functions used in Hive Keychain mobile and extensions",
+  "version": "1.2.3",
+  "description": "Platform-agnostic functions used in Hive Keychain mobile and extensions",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/stoodkev/hive-keychain-commons#readme",
   "devDependencies": {
+    "@hiveio/dhive": "^1.2.7",
     "@types/bytebuffer": "^5.0.44",
     "@types/node": "^18.11.19",
     "prettier": "^2.4.1",
@@ -44,7 +45,6 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "@hiveio/dhive": "^1.2.5",
     "moment": "^2.29.4",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1"
