--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hive-keychain-commons",
-  "version": "1.4.3",
+  "version": "1.5.0",
   "description": "Platform-agnostic functions used in Hive Keychain mobile and extensions",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -36,8 +36,11 @@
   },
   "homepage": "https://github.com/stoodkev/hive-keychain-commons#readme",
   "devDependencies": {
+    "@types/bs58": "^4.0.4",
     "@types/bytebuffer": "^5.0.44",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^18.11.19",
+    "@types/secp256k1": "^4.0.6",
     "prettier": "^2.4.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
@@ -45,7 +48,12 @@
   },
   "dependencies": {
     "@hiveio/dhive": "^1.2.8",
+    "bs58": "^4.0.1",
+    "crypto-js": "^4.2.0",
+    "hive-tx": "^6.0.4",
+    "jsbi": "^4.3.0",
     "moment": "^2.30.1",
+    "secp256k1": "^5.0.1",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1"
   }
