--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@hiveio/dhive": "^1.2.8",
     "bs58": "^4.0.1",
     "crypto-js": "^4.2.0",
-    "hive-tx": "^6.0.4",
+    "hive-tx": "github:hive-keychain/hive-tx-js",
     "jsbi": "^4.3.0",
     "moment": "^2.30.1",
     "secp256k1": "^5.0.1",
