--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["src"],
+  "include": ["src", "declarations.d.ts"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
